# bobots

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/bobots/base/: sensor.h
include/bobots/core/: vec2.h
include/bobots/math/: random.h
include/bobots/sensors/: distance_sensor.h
include/bobots/sim/: gaussian_sensor.h  sim_sensor.h  sim_value.h  world.h
include/bobots/sim/sensors/: sim_distance_sensor.h
libs/core/: CMakeLists.txt
libs/core/include/bobots/core/: vec2.h
src/: CMakeLists.txt
src/bobots/core/: CMakeLists.txt  vec2.cpp
src/bobots/math/: random.cpp  vec2.cpp
src/bobots/sim/: gaussian_sensor.cpp  sim_sensor.cpp  sim_value.cpp  world.cpp
src/bobots/sim/sensors/: sim_distance_sensor.cpp
